--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <script   src="./js/app.js"></script>
         <script>
-            // alert('I can design a website more professionaly but you mentioned that "but try to come up with something unique and fun! "');
+            alert('I can design a website more professionaly but you mentioned that "but try to come up with something unique and fun! "');
             var currentId = 1; 
 
             document.getElementById("tweetBtn").addEventListener("click", function(){
