--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 }else{
                     // const tweet = ;
                     // console.log(tweet);
-                    createAndInsertNewRetweet(currentId,tweet, name);
+                    createAndInsertNewRetweet(currentId, name,tweet);
                     // createNewTweet(tweet,name);
                     document.getElementById("name").value = "";
                     document.getElementById("tweet").value = "";
